# totem-ui

./: .cursorrules  .gitignore  pyproject.toml
qml/components/: PrimaryButton.qml  ScreenStack.qml  SplashScreen.qml  StatusCard.qml
qml/dialogs/: InfoDialog.qml
qml/pages/: app.qml  main.qml  second.qml  splash.qml
scripts/: setup.py
src/: __init__.py  main.py  main_debug.py
src/controller/: __init__.py  app_controller.py  screen_manager_controller.py  splash_controller.py
src/controller/app/: app_controller.py
src/controller/screenManager/: ScreenManagerController.py
src/controller/slider/: sliderController.py
src/models/: __init__.py  app_state.py  base_model.py  page.py  splash_image.py
src/repository/: __init__.py  app_state_repository.py  base_repository.py  page_repository.py  splash_image_repository.py
src/service/: __init__.py  app_state_service.py  screen_manager_service.py  splash_service.py
src/utils/: __init__.py  fonts.py
view/components/: qmldir
view/components/lists/: CategoryList.qml
view/screens/: app.qml
view/screens/blank/: BlankPage.qml
view/screens/mainScreen/: mainScreen.qml
view/screens/slider/: SliderScreen.qml
view/screens/vendingScreen/: VendingScreen.qml
view/styles/: LayoutStyle.qml  Theme.qml  qmldir
